# ft_irc

./: .gitignore  CMakeLists.txt  Makefile  a.out  basicCommand.txt  cl  client.cpp  ft_irc.cert  ft_irc.key  ft_irc.motd  ft_irc.pem  ft_irc_key.pem  ircserv  jira  main.cpp  ngircd_sample.conf  se  server.cpp  ssl.conf  test.cpp  testing.sh  todo.md
include/: Channel.hpp  Client.hpp  Host.hpp  Message.hpp  NumericReplies.hpp  Replies.hpp  Server.hpp  TLSServer.hpp  ft_irc.hpp  utils.hpp
res/: localhost.123  localhost.3000  localhost.3001  localhost.3003  user-asd
src/: Channel.cpp  Client.cpp  Host.cpp  Info.cpp  Message.cpp  Server.cpp  ServerCommand.cpp  ServerException.cpp  TLS.cpp  TLSServer.cpp  main.cpp  sendInfos.cpp  utils.cpp
src/commandHandler/: Channel.cpp  channelHandler.cpp  infoHandler.cpp  joinHandler.cpp  nickHandler.cpp  passHandler.cpp  privmsgHandler.cpp  registerCommands.cpp  serverHandler.cpp  userHandler.cpp  versionHandler.cpp  wallopsHandler.cpp
src/responseHandler/: commandResponse.cpp  errorResponse.cpp  registerReplies.cpp
tests/: AllTests.cpp  Makefile  MessageConstructTest.cpp  MessageParsingTest.cpp  ServerHandlerTest.cpp  Test.cpp  Test.hpp  disconnectClientTest.cpp  ft_hpp.hpp  messageConstructTest.cpp  messageParsingTest.cpp  nickHandlerTest.cpp  operHandlerTest.cpp  quitHandlerTest.cpp  registerUserTest.cpp  serverHandlerTest.cpp  squitHandlerTest.cpp  userHandlerTest.cpp
tests/gnl/: Makefile  get_next_line.c  get_next_line.h  get_next_line_utils.c
